[gd_scene load_steps=17 format=3 uid="uid://gi4d7ene1yry"]

[ext_resource type="Script" path="res://entities/enemies/enemy.gd" id="1_20di1"]
[ext_resource type="Script" path="res://components/sfx_component.gd" id="1_775mb"]
[ext_resource type="Script" path="res://components/move_component.gd" id="1_adapq"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="2_22hye"]
[ext_resource type="Script" path="res://components/health_component.gd" id="3_878qp"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="4_s22fk"]
[ext_resource type="Script" path="res://components/shake_component.gd" id="6_vqs7c"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="7_y8yol"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="8_01ugb"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="9_qvlws"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="10_b8tye"]
[ext_resource type="PackedScene" uid="uid://388o3eg8itei" path="res://resources/effects/explosion/explosion_effect.tscn" id="11_h7n27"]
[ext_resource type="Script" path="res://components/destroyed_component.gd" id="12_hklcl"]
[ext_resource type="Script" path="res://components/score_component.gd" id="13_tfy0w"]
[ext_resource type="Resource" uid="uid://cqkx4g8laqxwn" path="res://resources/game_stats/game_stats.tres" id="14_v50mu"]
[ext_resource type="AudioStream" uid="uid://d0h70lf3m4266" path="res://assets/sfx/explosion.wav" id="16_d64mm"]

[node name="Enemy" type="Node2D" node_paths=PackedStringArray("move_component", "scale_component", "health_component", "visible_on_screen_notifier", "flash_component", "shake_component", "hurtbox_component", "hitbox_component", "destroyed_component", "score_component")]
script = ExtResource("1_20di1")
move_component = NodePath("MoveComponent")
scale_component = NodePath("ScaleComponent")
health_component = NodePath("HealthComponent")
visible_on_screen_notifier = NodePath("VisibleOnScreenNotifier2D")
flash_component = NodePath("FlashComponent")
shake_component = NodePath("ShakeComponent")
hurtbox_component = NodePath("HurtboxComponent")
hitbox_component = NodePath("HitboxComponent")
destroyed_component = NodePath("DestroyedComponent")
score_component = NodePath("ScoreComponent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("entity")]
script = ExtResource("1_adapq")
entity = NodePath("..")

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("2_22hye")
sprite = NodePath("../AnimatedSprite2D")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_878qp")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_s22fk")
sprite = NodePath("../AnimatedSprite2D")

[node name="ShakeComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("6_vqs7c")
sprite = NodePath("../AnimatedSprite2D")

[node name="HurtboxComponent" type="Area2D" parent="."]
self_modulate = Color(0, 1, 0, 1)
collision_layer = 4
collision_mask = 0
script = ExtResource("7_y8yol")

[node name="HitboxComponent" type="Area2D" parent="."]
self_modulate = Color(1, 0, 0, 1)
collision_layer = 0
collision_mask = 2
script = ExtResource("8_01ugb")

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("health_component", "hurtbox_component")]
script = ExtResource("9_qvlws")
health_component = NodePath("../HealthComponent")
hurtbox_component = NodePath("../HurtboxComponent")
game_stats = ExtResource("14_v50mu")

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("10_b8tye")
scene = ExtResource("11_h7n27")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("entity", "health_component", "destroy_effect_spawner_component", "sfx_component")]
script = ExtResource("12_hklcl")
entity = NodePath("..")
health_component = NodePath("../HealthComponent")
destroy_effect_spawner_component = NodePath("../SpawnerComponent")
sfx_component = NodePath("../SfxExplosionComponent")

[node name="ScoreComponent" type="Node" parent="."]
script = ExtResource("13_tfy0w")
game_stats = ExtResource("14_v50mu")

[node name="SfxExplosionComponent" type="Node" parent="."]
script = ExtResource("1_775mb")
sound_effect = ExtResource("16_d64mm")
